# pytest-sugar

./: .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGES.rst  CONTRIBUTORS.rst  ISSUE_TEMPLATE.md  LICENSE  MANIFEST.in  README.md  README.rst  RELEASE.md  conftest.py  deploy.sh  pyproject.toml  pytest_instafail.py  pytest_sugar.py  requirements-dev.txt  setup.cfg  setup.py  test_instafail.py  test_sugar.py  tox.ini
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODE_OF_CONDUCT.md  ISSUE_TEMPLATE.md
.github/workflows/: build-and-test.yaml
faketests/animals/: test_error_in_fixture.py  test_example.py  test_flaky.py  test_one_failing_test.py  test_setup_error.py  test_skip_tests.py  test_successful_tests.py  test_teardown_error.py  test_xpass_and_xfail.py
faketests/fruits/: test_lots_of_successful_tests.py  test_very_very_very_very_very_very_very_very_very_very_very_very_very_very_very_long_filename.py
faketests/slowtests/: test_1.py  test_2.py  test_3.py
